--- a/PokeDesk/src/Components/Style.css
+++ b/PokeDesk/src/Components/Style.css
@@ -1,100 +1,210 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-body{
-    background-color: rgb(241, 241, 177);
-
+body {
+    background-color: rgb(252, 247, 210);
 }
 
-.container{
-    background-color: pink;
+.container {
+    background-color: transparent;
     width: 90%;
     padding-top: 100px;
     margin: auto;
     display: flex;
 }
 
-.left-content , .right-content{
+.left-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
-    width: 50%;
-    background-color: blanchedalmond;
+    width: 60%;
 }
 
-.button{
+.right-content {
+    width: 40%;
+    position: fixed;
+    top: 80px;
+    right: 10px;
     display: flex;
-
+    align-items: center;
+    text-align: center; 
+    justify-content: center;
+    padding: 50px;
 }
-.button button{
+
+.poke-Info-Card {
+    width: 380px;
+    padding: 30px 14px;
+    border-collapse: collapse;
+    background: rgba(241, 218, 218, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    border-radius: 10px;
+}
+
+.button {
+    display: flex;
+}
+
+.button button {
     outline: none;
     border: none;
     width: 150px;
     padding: 0.3rem 0;
     margin: 1rem;
     font-size: 17px;
-    background-color: green;
+    border-radius: 10px;
+    background-color: rgb(239, 97, 232);
 }
+
 /* Card CSS */
 
-.card-container{
+.card-container {
+    cursor: pointer;
     background-color: aqua;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     display: block;
-    width: 150px;
+    margin: 10px 10px;
+    width: 180px;
     height: 200px;
     align-items: center;
     text-align: center;
     border-radius: 1rem;
+    overflow: hidden;
 }
 
-.pokemon-image{
-    width: 90%;
+.pokemon-image {
+    padding: 10px 4px;
+    width: 100%;
     margin: auto;
-    height: 50%;
+    height: 70%;
 }
 
-.pokemon-image img{
-    width: 100px;
+.pokemon-image img {
+    width: 100%;
+    height: 100%;
 }
 
-.pokemon-info{
-    width: 90%;
-    height: 50%;
+.pokemon-info {
+    width: 100%;
+    height: 35%;
     margin: auto;
     align-items: center;
     text-align: center;
-    padding-top: 30px;
-
+    padding-top: 25px;
+    background: rgb(242, 172, 242);
 }
 
-.pokemon-info h2{
+.pokemon-info h2 {
     font-size: 16px;
-
+    margin-bottom: 5px;
 }
 
-.pokemon-info h1{
+.pokemon-info h1 {
     font-size: 18px;
 }
 
-/* */
+/* Pokemon Info Card Right Side*/
 
-.Poke-info-container{
-    width: 80%;
-    height: 500px;
-    display: block;
+table {
+    width: 100%;
+    border-collapse: collapse;
 }
 
-.Poke-Image img{
+table td {
+    border: 2px solid black;
+    padding: 6px 5px;
+    text-align: start;
+}
+
+table td:nth-child(1) {
+    width: 60%;
+    text-transform: uppercase;
+}
+
+table td:nth-child(2) {
+    text-align: center;
+}
+
+.group {
+    overflow: hidden;
+    margin-left: 10px;
+    border: 1px solid black;
+}
+
+.group h2 {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 2px;
+}
+
+.Poke-info-container {
+    width: 100%;
+    height: 500px;
+    display: inline;
+}
+
+.Poke-Image {
+    border-bottom: 2px solid black;
+}
+
+.Poke-Image img {
     width: 250px;
     height: 250px;
 }
 
-.abilities{
-    padding: 20px;
+.abilities {
+    justify-content: space-between;
+    display: flex;
+    padding: 20px 0px;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+    .left-content {
+        width: 100%;
+    }
+    .right-content {
+        position: static;
+        width: 100%;
+        padding: 20px;
+    }
+    .poke-Info-Card {
+        width: 90%;
+        margin: 20px auto;
+    }
+    .card-container {
+        width: 100%;
+        margin: 10px auto;
+    }
+    .Poke-Image img {
+        width: 150px;
+        height: 150px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .button button {
+        width: 120px;
+    }
+    .poke-Info-Card {
+        padding: 20px 10px;
+    }
+    .pokemon-info h1 {
+        font-size: 16px;
+    }
+    .pokemon-info h2 {
+        font-size: 14px;
+    }
 }
