--- a/PokeDesk/src/Components/Style.css
+++ b/PokeDesk/src/Components/Style.css
@@ -11,9 +11,10 @@ body {
 
 .container {
     background-color: transparent;
-    width: 90%;
-    padding-top: 100px;
+    max-width: 1500px;
+    width: calc(100% - 2rem);
     margin: auto;
+    padding-top: 100px;
     display: flex;
 }
 
